kubernetes/apps/cert-manager/cert-manager/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: cert-manager
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: api.cloudflare.com
          - matchName: letsencrypt.org
          - matchPattern: "*.api.letsencrypt.org"
